# apexpy

./: .bumpversion.cfg  .codeclimate.yml  .cookiecutterrc  .flake8  .gitignore  .landscape.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  bash_test  meson.build  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  main.yml  scipy.yml  windows.yml
apexpy/: __init__.py  __main__.py  _copyfiles.py  _gcc_build_bitness.py  apex.py  helpers.py
apexpy/fortranapex/: apexsh.f90
apexpy/tests/: test_Apex.py  test_cmd.py  test_fortranapex.py  test_helpers.py
ci/: appveyor-bootstrap.py  appveyor-download.py  bootstrap.py  check.sh  fix-compiler-error.py
ci/templates/: .travis.yml  appveyor.yml  tox.ini
docs/: Makefile  api.rst  citing.rst  conf.py  contributing.rst  ex_index.rst  index.rst  installation.rst  maintenance.rst  requirements.txt  usage.rst
docs/examples/: ex_apexh.rst  ex_cli.rst  ex_gc.rst  ex_init.rst  index.rst
docs/reference/: Apex.rst  cli.rst  fortranapex.rst  helpers.rst  index.rst
fortranapex/: Makefile  apex.f90  apexsh.f90  checkapexsh.f90  fortranapex-f2pywrappers.f  fortranapex-f2pywrappers2.f90  fortranapex.pyf  fortranapexmodule.c  igrf.f90  magfld.f90  makeapexsh.f90  readme.txt
src/apexpy/: __init__.py  __main__.py  _gcc_build_bitness.py  apex.py  helpers.py
src/fortranapex/: Makefile  apex.f  apex.f90  apexsh.f90  checkapexsh.f90  fortranapex.pyf  igrf.f90  magfld.f  magfld.f90  makeapexsh.f90  readme.txt
tests/: test_Apex.py  test_cmd.py  test_convert.txt  test_convert_single_line.txt  test_fortranapex.py  test_helpers.py  test_init.py
