[build-system]
build-backend = 'mesonpy'
requires = ["meson-python>=0.5.0", "wheel", "Cython", "numpy", "setuptools",
            "python-dev-tools"]

[project]
name = "apexpy"
license = {file = "LICENSE"}
description = "A Python wrapper for Apex coordinates"
author = "Crister van der Meeren, et al."
maintainers = [
    {name = "Angeline G. Burrell", email = "angeline.burrell@nrl.navy.mil"},
]
requires-python = ">=3.7"
dependencies = [
    # TODO: update to "pin-compatible" once possible, see
    # https://github.com/FFY00/meson-python/issues/29
    "numpy>=1.19.5",
]
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dynamic = ['version']

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  ]
doc = ["sphinx>=1.3"]

[project.urls]
source = "https://github.com/aburrell/apexpy"
documentation = "https://apexpy.readthedocs.io/en/latest/"
tracker = "https://github.com/aburrell/apexpy/issues"
download = "https://github.com/aburrell/apexpy/releases"