[build-system]
build-backend = 'mesonpy'
requires = [
	 "wheel",
	 "meson-python>=0.12.0",
	 "setuptools<60.0",  # Do not increase, 60.0 enables vendored distutils
	 "Cython>=0.29.21",
	 "numpy"
]

[project]
name = "apexpy"
version = "2.1.0"
license = {file = "LICENSE"}
description = "A Python wrapper for Apex coordinates"
maintainers = [
    {name = "Angeline Burrell", email = "angeline.g.burrell.civ@us.navy.mil"},
]
requires-python = ">=3.9"
dependencies = [
    # TODO: update to "pin-compatible" once possible, see
    # https://github.com/mesonbuild/meson-python/issues/29
    "numpy>=1.19.5",
]
readme = "README.rst"
keywords = [
	 "apex",
	 "modified apex",
	 "quasi-dipole",
	 "quasi dipole",
	 "coordinates",
	 "magnetic coordinates",
	 "mlt",
	 "magnetic local time",
	 "conversion",
	 "converting",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.scripts]
apexpy = 'apexpy.__main__:main'

[project.optional-dependencies]
test = [
  "coverage",
  "flake8",
  "pytest",
  "pytest-cov",
  "pytest-xdist"
  ]
doc = [
  "pyproject_parser",
  "sphinx>=1.3",
  "sphinx-autoapi",
  "sphinx-rtd-theme"
]

[project.urls]
source = "https://github.com/aburrell/apexpy"
documentation = "https://apexpy.readthedocs.io/en/latest/"
tracker = "https://github.com/aburrell/apexpy/issues"
download = "https://github.com/aburrell/apexpy/releases"

[tool.setuptools.package-data]
mypkg = [
  "apexsh.dat",
  "igrf14coeffs.txt"
]

[tool.coverage.run]
branch = true
relative_files = true
parallel = true
include = "*/site-packages/apexpy/*"

[tool.coverage.report]
show_missing = true
precision = 2
