[metadata]
name = apexpy
version = 1.0.4
license = MIT
description = "A Python wrapper for Apex coordinates"
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = Crister van der Meeren, et al.
author_email = angeline.burrell@nrll.navy.mil
url = https://github.com/aburrell/apexpy
keywords =
  apex
  modified apex
  quasi-dipole
  quasi dipole
  coordinates
  magnetic coordinates
  mlt
  magnetic local time
  conversion
  converting
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Operating System :: POSIX
  Operating System :: Microsoft :: Windows
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Physics
  Topic :: Utilities

[options]
zip_safe = False
package_dir =
  =src
install_requires = numpy
include_package_data = True
include_entry_points = True

[options.entry_points]
console_scripts =
    apexpy = apexpy.__main__:main

[options.package_data]
apexpy = apexsh.dat

[aliases]
release = register clean --all sdist

[bumpversion]
current_version = 1.0.4
commit = True
tag = True

[bumpversion:file:docs/conf.py]

[bumpversion:file:src/apexpy/__init__.py]

[coverage:paths]
source = src

[coverage:run]
branch = True
relative_files = True
include = */apexpy/*
	*/tests/*
source = src
parallel = True

[coverage:report]
show_missing = True
precision = 2
omit = *migrations*

[flake8]
max-line-length = 80
exclude = */migrations/*,*/south_migrations/*

[tool:pytest]
log_cli = True
log_level = NOTSET
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    south_migrations
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
  -vv
  --ignore = src
  --ignore = ci
  --ignore = docs
  --doctest-modules
  --doctest-glob = '*.rst'
  -rxEfsw
  --strict
  --ignore = docs/conf.py
  --ignore = setup.py
  --ignore = .eggs
  --tb = short
flake8-ignore =
  *.py W503
  docs/conf.py ALL
  src/apexpy/__init__.py F401

[isort]
line_length = 80
known_first_party = apexpy
default_section = THIRDPARTY
length_sort = 1
multi_line_output = 0

[matrix]
# This is the configuration for the `./bootstrap.py` script.
# It generates `.travis.yml`, `tox.ini` and `appveyor.yml`.
#
# Syntax: [alias:] value [!variable[glob]] [&variable[glob]]
#
# alias:
#  - is used to generate the tox environment
#  - it's optional
#  - if not present the alias will be computed from the `value`
# value:
#  - a value of "-" means empty
# !variable[glob]:
#  - exclude the combination of the current `value` with
#    any value matching the `glob` in `variable`
#  - can use as many you want
# &variable[glob]:
#  - only include the combination of the current `value`
#    when there's a value matching `glob` in `variable`
#  - can use as many you want

python_versions =
    2.7
    3.6
    3.7
    3.8
    3.9

coverage_flags =
    : true
    nocover: false

environment_variables =
    -

