[metadata]
version = 1.1.0
authors = Crister van der Meeren, et al.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/aburrell/apexpy

[options]
zip_safe = False
install_requires = numpy
include_package_data = True
include_entry_points = True

[options.entry_points]
console_scripts =
    apexpy = apexpy.__main__:main

[options.package_data]
apexpy =
    apexsh.dat
    igrf13coeffs.txt

[aliases]
release = register clean --all sdist

[coverage:run]
branch = True
relative_files = True
source = apexpy
parallel = True

[coverage:report]
show_missing = True
precision = 2
omit = *migrations*

[flake8]
max-line-length = 80
exclude = */migrations/*,build/*
ignore = *.py W503
       setup.py F811
       apexpy/__init__.py F401
