[metadata]
name = apexpy
version = 2.0.1
license = MIT
description = "A Python wrapper for Apex coordinates"
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/aburrell/apexpy
keywords =
  apex
  modified apex
  quasi-dipole
  quasi dipole
  coordinates
  magnetic coordinates
  mlt
  magnetic local time
  conversion
  converting
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Operating System :: POSIX
  Operating System :: Microsoft :: Windows
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Physics
  Topic :: Utilities

[options]
zip_safe = False
install_requires = numpy
include_package_data = True
include_entry_points = True

[options.entry_points]
console_scripts =
    apexpy = apexpy.__main__:main

[options.package_data]
apexpy =
    apexsh.dat
    igrf13coeffs.txt

[aliases]
release = register clean --all sdist

[coverage:run]
branch = True
relative_files = True
parallel = True
include = */site-packages/apexpy/*

[coverage:report]
show_missing = True
precision = 2
omit = *migrations*

[flake8]
max-line-length = 80
exclude = */migrations/*,build/*,setup.py
ignore = W503
